--- a/auth/package.json
+++ b/auth/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
