--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^12.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "bootstrap": "^5.0.1",
+    "next": "^10.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
