--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.0.1",
     "next": "^10.2.3",
     "react": "^17.0.2",
