--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,25 +18,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cygnetops/common": "^1.0.20",
-    "@types/cookie-session": "^2.0.42",
-    "@types/express": "^4.17.12",
-    "@types/jsonwebtoken": "^8.5.1",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
+    "@blaitware/common": "^1.0.3",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.11.1",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.11",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4"
+    "mongoose": "^6.4.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/supertest": "^2.0.11",
-    "jest": "^27.0.4",
-    "mongodb-memory-server": "^6.9.6",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.2"
+    "@types/jest": "^28.1.5",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
+    "mongodb-memory-server": "^8.7.2",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.5"
   }
 }
