--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -24,3 +24,11 @@ build:
         manual:
           - src: "**/*.js"
             dest: . 
+    - image: mcjovial/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: . 
